[gd_scene load_steps=27 format=2]

[ext_resource path="res://Imagenes/fondohindu.png" type="Texture" id=1]
[ext_resource path="res://Imagenes/cuadradooscuro.png" type="Texture" id=2]
[ext_resource path="res://Imagenes/cuadrado.png" type="Texture" id=3]
[ext_resource path="res://Imagenes/nivel1mayas.png" type="Texture" id=4]
[ext_resource path="res://Imagenes/triangb.png" type="Texture" id=5]
[ext_resource path="res://Imagenes/triangoscuro.png" type="Texture" id=6]
[ext_resource path="res://Imagenes/fondo1piramides.png" type="Texture" id=7]
[ext_resource path="res://Imagenes/figoscu.png" type="Texture" id=8]
[ext_resource path="res://Imagenes/figclaro.png" type="Texture" id=9]
[ext_resource path="res://Imagenes/flechainv.png" type="Texture" id=10]
[ext_resource path="res://Imagenes/regree23.png" type="Texture" id=11]
[ext_resource path="res://Imagenes/regree22.png" type="Texture" id=12]
[ext_resource path="res://Scrips/nivel_1/Nivel_1.gd" type="Script" id=13]
[ext_resource path="res://Imagenes/flecha21.png" type="Texture" id=14]
[ext_resource path="res://Musica/y2mate.com - Bonnie Grace  One With the Tribe.mp3" type="AudioStream" id=15]
[ext_resource path="res://Musica/sound-14.mp3" type="AudioStream" id=16]
[ext_resource path="res://Musica/sound-2.mp3" type="AudioStream" id=17]
[ext_resource path="res://Musica/sound-9.mp3" type="AudioStream" id=18]

[sub_resource type="Animation" id=10]
resource_name = "Cmabio"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "Intro"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Izq:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -700, -100 ), Vector2( -800, -100 ), Vector2( -700, -100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Der:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 700, -100 ), Vector2( 800, -100 ), Vector2( 700, -100 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Izq:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -700, -100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Der:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 700, -100 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Intro"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "salida_niveles"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Nivel_1" type="Node2D"]
script = ExtResource( 13 )

[node name="Cuadrado" type="Node2D" parent="."]

[node name="Nivel1Mayas" type="Sprite" parent="Cuadrado"]
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="Cuadrado"]
margin_left = 792.0
margin_top = 372.0
margin_right = 1132.0
margin_bottom = 711.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Triangulo" type="Node2D" parent="."]

[node name="Vac√≠ostriangulos" type="Sprite" parent="Triangulo"]
position = Vector2( 2812, 540 )
scale = Vector2( 0.929332, 1 )
texture = ExtResource( 7 )

[node name="Triangulos" type="TextureButton" parent="Triangulo"]
margin_left = 3147.0
margin_top = 660.0
margin_right = 3487.0
margin_bottom = 829.0
rect_rotation = 180.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hexagono" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Hexagono"]
position = Vector2( 4662, 540 )
texture = ExtResource( 1 )

[node name="Hexagonos" type="TextureButton" parent="Hexagono"]
margin_left = 4494.0
margin_top = 390.0
margin_right = 4840.0
margin_bottom = 736.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cambio_de_posicion_intro2" type="AnimationPlayer" parent="Hexagono"]
root_node = NodePath("../../Camera2D")
anims/Cmabio = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 963, 538 )
current = true

[node name="salir" type="TextureButton" parent="Camera2D"]
margin_left = -932.0
margin_top = -502.0
margin_right = -794.0
margin_bottom = -364.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Izq" type="TextureButton" parent="Camera2D"]
margin_left = -700.0
margin_top = -100.0
margin_right = -574.0
margin_bottom = 124.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Der" type="TextureButton" parent="Camera2D"]
margin_left = 700.0
margin_top = -100.0
margin_right = 826.0
margin_bottom = 124.0
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
margin_left = -962.0
margin_top = -542.0
margin_right = 977.0
margin_bottom = 559.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="AnimationPlayer" parent="Camera2D"]
autoplay = "Intro"
anims/Intro = SubResource( 1 )
anims/RESET = SubResource( 4 )

[node name="salida" type="AnimationPlayer" parent="Camera2D"]
anims/Intro = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="salida_level" type="AnimationPlayer" parent="Camera2D"]
anims/RESET = SubResource( 14 )
anims/salida_niveles = SubResource( 15 )

[node name="Salir2" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource( 16 )
volume_db = 10.0

[node name="Seleccion" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource( 17 )
volume_db = 10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -16.0

[node name="selec_figura" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 10.0

[connection signal="pressed" from="Cuadrado/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Triangulo/Triangulos" to="." method="_on_Triangulos_pressed"]
[connection signal="pressed" from="Hexagono/Hexagonos" to="." method="_on_Hexagonos_pressed"]
[connection signal="animation_finished" from="Hexagono/Cambio_de_posicion_intro2" to="." method="_on_Cambio_de_posicion_intro2_animation_finished"]
[connection signal="pressed" from="Camera2D/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Camera2D/Izq" to="." method="_on_Izq_pressed"]
[connection signal="pressed" from="Camera2D/Der" to="." method="_on_Der_pressed"]
[connection signal="animation_finished" from="Camera2D/salida" to="." method="_on_salida_animation_finished"]
[connection signal="animation_finished" from="Camera2D/salida_level" to="." method="_on_salida_level_animation_finished"]
